--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
   - "6.16.0"
-install:
+before_install:
   - npm install -g codecov
-  - npm install
-script:
-  - npm test
+after_success:
   - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec && codecov
