--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "6.16.0"
 before_install:
-  - npm install -g codecov
+  - npm install -g nyc
 after_success:
-  - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js --verbose
+  - nyc report --reporter=lcov | ./node_modules/.bin/codecov
+
